# renovate-metadashboard

./: .dockerignore  .env.template  .gitignore  .release-notes-assistant.yaml  Cargo.toml  Dockerfile  README.md  renovate.json
.github/workflows/: build.yml  release.yml  renovate.yml
src/: bitbucket.rs  client.rs  config.rs  forgejo.rs  gitlab.rs  main.rs  parser.rs  report.rs
