[package]
name = "renovate-dashboard"
version = "0.1.0"
edition = "2024"

[dependencies]
forgejo-api = { version = "0.11", default-features = false, features = ["rustls-tls"] }
gitlab = "0.1900.0"
reqwest = { version = "0.13", default-features = false, features = ["rustls", "json"] }
serde = { version = "1", features = ["derive"] }
dotenv = "0.15"
tokio = { version = "1", features = ["full"] }
pulldown-cmark = "0.13"
url = "2"
eyre = "0.6"
chrono = { version = "0.4", features = ["serde"] }
